# spch2txt

./: .env.example  .gitignore  README.md  WINDOWS_SETUP.md  pyproject.toml  run_app.bat
.streamlit/: config.toml
src/: audio_devices.py  probe_record.py  probe_transcribe.py
src/audio/: __init__.py  audio_devices.py  capture.py  diarization.py  probe_record.py  probe_transcribe.py  summarizer.py  transcription.py  utils.py
src/saved_summary/: test_summary_20251022.txt
src/test/: test_teams_audio.py  test_workflow.py
src/ui/: app.py  streamlit_advanced.py  streamlit_app.py  test_recording.py
tests/: README.md  test_audio_devices.py  test_diarization.py  test_full_workflow.py  test_record.py  test_summarizer.py  test_teams_audio.py  test_transcribe.py  test_workflow.py  test_workflow_from_file.py
