[project]
name = "spch2txt"
version = "0.1.0"
description = ""
authors = [
    {name = "Yonah Bole",email = "80701265+Nayrobie@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
